--- a/src/style/main.css
+++ b/src/style/main.css
@@ -1,117 +1,99 @@
 * {
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .wrapper {
-    width: 80%;
+    width: 90%;
+    max-width: 1320px;
     margin-inline: auto;
 }
 
-.header {
+.wrapper-nav {
     display: flex;
-    align-items: center;
-    justify-content: center;
     justify-content: space-between;
-    justify-content: space-evenly;
+    align-items: center;
 }
 
-.header__nav {
+.nav {
     display: flex;
-    align-items: center;
-    gap: 20px;
     list-style: none;
     font-size: 20px;
+    font-size: max(11px, min(20px, 1.4vw));
     color: rgba(76, 66, 68, 1);
+    cursor: pointer;
+    margin: 0;
+    padding: 0;
 }
 
-.img-log {
-    width: 200px;
+.nav__logo {
+    max-width: 200px;
+    min-width: 100px;
+    width: 16.5vw;
 }
 
-.header__nav li {
+.nav li:not(:last-child)::after {
+    content: "";  
+    position: relative;
     border-right: 2px solid;
-    color: rgba(76, 66, 68, 1);
-    padding-right: 30px;
+    height: 22px;
+    margin: 1em;
+    padding: 0;
 }
 
-.big-block {
-    display: flex;
-    justify-content: center;
-    margin-top: 80px;
-    gap: 30px;
-}
-
-.big-block__min-block {
-    width: 400px;
-    height: 600px;
-    background-color: rgba(244, 236, 233, 1);
-    border-radius: 20px;
-}
-
-.big-block__min-block_two {
-    width: 400px;
-    height: 600px;
-    background-color: rgba(244, 236, 233, 1);
-    border-radius: 20px;
-}
-
-.big-block__min-block_tree {
-    width: 400px;
-    height: 600px;
-    background-color: rgba(244, 236, 233, 1);
-    border-radius: 20px;
-}
-
-.img {
-   width: 400px;
-}
-
-.heading {
-  font-size: 32px;
-}
-
-.min-block__text {
-    width: 320px;
-    text-align: center;
-    font-size: 24px;
-    margin: auto;
-    color: rgba(76, 66, 68, 1);
+.wrapper-nav--mobile {
+    display: none;
 }
 
 @media screen and (max-width: 768px) {
-    .header {
-      width: 1200px;
-    }
-}
-
-@media screen and (max-width: 320px) {
-    .header__nav {
-       display: none;
-    }
-}
-
-@media screen and (max-width: 768px) {
-    .big-block {
-        width: 992px;
-    }
-}
-
-@media screen and (max-width: 320px) {
-    .wrapper {
+    .wrapper-nav--mobile {
         display: flex;
-        flex-wrap: wrap;
-    }
-}
+        justify-content: space-between;
+        align-items: center;
+    }  
 
-@media screen and (max-width: 320px) {
-    .big-block {
-        display: flex;
-        flex-wrap: wrap;
+    .burger {
+        margin-left: 13px;
     }
-}
 
-@media screen and (max-width: 768px) {
-    .big-block__min-block_tree {
+    .burger__line {
+        width: 2rem;
+        height: 3px;
+        background-color: #4C4244;
+    }
+
+    .burger > :not(:last-child){
+        margin-bottom: 10px;
+    }
+
+    .burger:hover {
+        cursor: pointer;
+    }
+
+    .wrapper-nav {
         display: none;
     }
+
+    .nav--mobile { 
+        margin: 0;
+        padding-top: 30px;
+        list-style: none;
+        display: flex;
+        flex-direction: column;
+        position: absolute;
+        background-color: #fff;
+        color: #4C4244;
+        height: 100vh;
+        width: 100%;
+        transition: all 1s;
+        left: 100%;
+        line-height: 30px;
+        top: 0;
+    }
+
+    #close {
+        position: absolute;
+        left: 80%;
+        font-size: 40px;
+    }
 }
+
